--- a/homeoptik/templates/oscar/checkout/checkout.html
+++ b/homeoptik/templates/oscar/checkout/checkout.html
@@ -84,7 +84,7 @@
                     <h2>{% trans "Payment" %}</h2>
                 </div>
                 <div class="well well-success">
-                    <a href="{% url 'checkout:payment-details' %}" class="pull-right">
+                    <a href="{% url 'checkout:payment-method' %}" class="pull-right">
                         {% trans "Change" %}
                     </a>
                     <h3>{% trans "Payment" %}</h3>
