--- a/homeoptik/templates/oscar/checkout/nav.html
+++ b/homeoptik/templates/oscar/checkout/nav.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 {% load i18n %}
 
 <!-- Nav Bottom
@@ -13,7 +14,7 @@
                 <span class="sr-only">Toggle navigation</span>
                 <i class="fa fa-navicon"></i>
             </button>
-            <a class="navbar-brand visible-xs" href="#"><img src="images/logo-xs.png" alt="H"></a>
+            <a class="navbar-brand visible-xs" href="#"><img src="{% static "images/logo-xs.png" %}" alt="H"></a>
         </div>
         <!-- /Header-->
 
