--- a/homeoptik/templates/oscar/checkout/payment_details.html
+++ b/homeoptik/templates/oscar/checkout/payment_details.html
@@ -18,14 +18,13 @@
 
 {% block payment_details %}
     {% block payment_details_content %}
-        <p>{% trans "This page needs implementing within your project.  You may want to use one of Oscar's payment gateway libraries:" %}</p>
-        <ul>
-            <li><a href="https://github.com/django-oscar/django-oscar-paypal">django-oscar-paypal</a></li>
-            <li><a href="https://github.com/django-oscar/django-oscar-datacash">django-oscar-datacash</a></li>
-            <li><a href="https://github.com/django-oscar/django-oscar-gocardless">django-oscar-gocardless</a></li>
-            <li><a href="https://github.com/django-oscar/django-oscar-paymentexpress">django-oscar-paymentexpress</a></li>
-            <li><a href="https://github.com/django-oscar/django-oscar-accounts">django-oscar-accounts</a></li>
-        </ul>
-        <a id="view_preview" href="{% url 'checkout:preview' %}" class="btn btn-primary btn-lg">{% trans "Continue" %}</a>
+        <form name="ShopForm" method="POST" action="{% url 'checkout:preview' %}">
+            {% csrf_token %}
+            {% include "partials/form_fields.html" with form=payment_form %}
+            <div class="form-actions">
+                <button type="submit" class="btn btn-large btn-primary">{% trans "Continue" %}</button>
+            </div>
+        </form>
+{#        <a id="view_preview" href="{% url 'checkout:preview' %}" class="btn btn-primary btn-lg">{% trans "Continue" %}</a>#}
     {% endblock payment_details_content %}
 {% endblock payment_details %}
