--- a/homeoptik/templates/oscar/catalogue/partials/add_to_basket_form.html
+++ b/homeoptik/templates/oscar/catalogue/partials/add_to_basket_form.html
@@ -10,6 +10,7 @@
     <form id="add_to_basket_form" action="{% url 'basket:add' pk=product.pk  %}" method="post">
         {% csrf_token %}
         {% include "partials/form_fields.html" with form=basket_form %}
+        {{ product.product_class.attributes.objects.all }}
         <button type="submit" class="btn btn-default btn-bigger" value="{% trans "Add to basket" %}" data-loading-text="{% trans 'Adding...' %}"><i class="icon-left ti ti-shopping-cart"></i>{% trans "Add to basket" %}</button>
     </form>
 {#    {% include "catalogue/partials/add_to_wishlist.html" %}#}
