--- a/homeoptik/templates/oscar/search/results.html
+++ b/homeoptik/templates/oscar/search/results.html
@@ -4,6 +4,7 @@
 {% load thumbnail %}
 {% load product_tags %}
 {% load i18n %}
+{% load widget_tweaks %}
 
 {% block title %}
     "{{ query }}" | {{ block.super }}
@@ -23,14 +24,21 @@
 
 {% block column_left %}
     {% if has_facets %}
-        <h4>{% trans "Refine your search" %}</h4>
-        <dl>
-            {% for field, data in facet_data.items %}
-                {% if data.results %}
+        <!-- Side Widget -->
+        <div class="side-widget no-margin-l">
+
+            <h5 class="boxed-title">{% trans "Refine by" %}</h5>
+
+            <!-- Price Range Form -->
+            <form class="side-form-panel">
+                {% for field, data in facet_data.items %}
                     {% include 'search/partials/facet.html' with name=data.name items=data.results %}
-                {% endif %}
-            {% endfor %}
-        </dl>
+                {% endfor %}
+
+            </form>
+            <!-- /Price Range Form -->
+        </div>
+        <!-- /Side Widget -->
     {% endif %}
 {% endblock %}
 
@@ -41,53 +49,64 @@
 {% endblock %}
 
 {% block content %}
-    <form method="get" action="." class="form-horizontal">
-        {# Render other search params in a hidden block #}
-        <div style="display:none">
-            {% for value in selected_facets %}
-                <input name="selected_facets" value="{{ value }}" />
-            {% endfor %}
-            {{ search_form.q }}
-        </div>
-        {% if paginator.count %}
-            {% if paginator.num_pages > 1 %}
-                {% blocktrans with start=page.start_index end=page.end_index num_results=paginator.count %}
-                    Found <strong>{{ num_results }}</strong> results, showing <strong>{{ start }}</strong> to <strong>{{ end }}</strong>.
-                {% endblocktrans %}
-            {% else %}
-                {% blocktrans count num_results=paginator.count %}
-                    Found <strong>1</strong> result.
-                {% plural %}
-                    Found <strong>{{ num_results }}</strong> results. 
-                {% endblocktrans %}
-            {% endif %}
-            <div class="pull-right">
-                {% include "partials/form_field.html" with field=search_form.sort_by %}
+    <!-- Products Filter -->
+    <div class="products-filter clearfix">
+        <form method="get" class="form-horizontal">
+            {# Render other search params in a hidden block #}
+            <div style="display:none">
+                {% for value in selected_facets %}
+                    <input name="selected_facets" value="{{ value }}" />
+                {% endfor %}
+                {{ form.q }}
             </div>
-        {% else %}
-            <p>
-                {% trans "Found <strong>0</strong> results." %}
-                {% if suggestion %}
-                    {% url 'search:search' as search_url %}
-                    {% blocktrans %}
-                        Did you mean <a href="{{ search_url }}?q={{ suggestion }}">"{{ suggestion }}"</a>?
-                    {% endblocktrans %}
+            <div class="display">
+                <span class="show-list" onclick="changeView('list')"><i class="icon fa fa-th-list"></i></span>
+                <span class="show-grid" onclick="changeView('grid')"><i class="icon fa fa-th"></i></span>
+                {% if paginator.count %}
+                    {% if paginator.num_pages > 1 %}
+                        {% blocktrans with start=page_obj.start_index end=page_obj.end_index count num_results=paginator.count %}
+                            <strong>{{ num_results }}</strong> результат - показано с <strong>{{ start }}</strong> по <strong>{{ end }}</strong>.
+                        {% plural %}
+                            <strong>{{ num_results }}</strong> результатов - показано с <strong>{{ start }}</strong> по <strong>{{ end }}</strong>.
+                        {% endblocktrans %}
+                    {% else %}
+                        {% blocktrans count num_results=paginator.count %}
+                            <strong>1</strong> результат.
+                        {% plural %}
+                            <strong>{{ num_results }}</strong> результатов.
+                        {% endblocktrans %}
+                    {% endif %}
+                {% else %}
+                    <p>
+                        {% trans "Found <strong>0</strong> results." %}
+                        {% if suggestion %}
+                            {% url 'search:search' as search_url %}
+                            {% blocktrans %}
+                                Did you mean <a href="{{ search_url }}?q={{ suggestion }}">"{{ suggestion }}"</a>?
+                            {% endblocktrans %}
+                        {% endif %}
+                    </p>
                 {% endif %}
-            </p>
-        {% endif %}
-    </form>
+            </div>
+            {% if paginator.count %}
+                <div class="filter">
+                    <b class="hidden-xs">Сортировать по</b>
+                    {% render_field form.sort_by %}
+                </div>
+            {% endif %}
+        </form>
+    </div>
+    <!-- /Products Filter -->
 
     {% if page.object_list %}
-        <section>
-            <div>
-                <ol class="row">
-                    {% for result in page.object_list %}
-                        <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3">{% render_product result.object %}</li>
-                    {% endfor %}
-                </ol>
-                {% include "partials/pagination.html" with page_obj=page %}
-            </div>
-        </section>
+        <div class="product-grid row grid-20 mgb-20">
+            {% for result in page.object_list %}
+                <div class="col-sm-6 col-md-4">
+                    {% render_product result.object %}
+                </div>
+            {% endfor %}
+            {% include "partials/pagination.html" with page_obj=page %}
+        </div>
     {% endif %}
 
 {% endblock %}
