--- a/homeoptik/templates/oscar/search/partials/facet.html
+++ b/homeoptik/templates/oscar/search/partials/facet.html
@@ -9,7 +9,7 @@
     <!-- Heading -->
     <div class="panel-heading no-bg-color">
         <h4 class="panel-title">
-            <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ number }}" aria-expanded="true">
+            <a data-toggle="collapse"  href="#collapse{{ number }}" aria-expanded="true">
                 {{ name }}
             </a>
             <i class="font-size-sm toggler ti ti-plus"></i>
