--- a/homeoptik/templates/oscar/search/results.html
+++ b/homeoptik/templates/oscar/search/results.html
@@ -29,16 +29,12 @@
 
             <h5 class="boxed-title">{% trans "Refine by" %}</h5>
 
-            <!-- Price Range Form -->
-            <form class="panel-group" id="accordion">
-                <!-- Accordion -->
-                {#                <div class="panel-group" id="accordion">#}
+            <form class="panel-group">
                 {% for field, data in facet_data.items %}
                     {% include 'search/partials/facet.html' with number=forloop.counter0 name=data.name items=data.results %}
                 {% endfor %}
-                {#                </div>#}
             </form>
-            <!-- /Price Range Form -->
+
         </div>
         <!-- /Side Widget -->
     {% endif %}
